--- a/src/Projeto/css/index/index.css
+++ b/src/Projeto/css/index/index.css
@@ -135,14 +135,18 @@
     text-transform: uppercase;
 }
 
+.link-carrossel {
+    text-decoration: none;
+}
+
 .botao-carrossel {
-    padding: 10px;
-    text-transform: uppercase;
-    font-weight: 700;
+    color: var(--cor-2);
     font-size: 1.2em;
+    font-weight: 700;
     letter-spacing: 1px;
     word-spacing: 1px;
-    color: var(--cor-2);
+    text-transform: uppercase !important;
+    padding: 10px;
     border: 2px solid var(--cor-2);
     border-radius: 10px;
     background-color: transparent;
